services/network/k8s.fdd-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fdd-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: fddui
          servicePort: 80
      - path: /api/*
        backend:
          serviceName: fddapi
          servicePort: 3000
